@@ -16,26 +16,48 @@
 
 plugins {
     id 'java'
+    id 'maven'
     id 'idea'
     id 'checkstyle'
+    id 'com.github.spotbugs' version '2.0.0'
 }
 
 defaultTasks 'clean', 'build'
 
-
 def AERON_VERSION = '1.20.0'
 def AGRONA_VERSION = '1.0.3'
+def CHECKSTYLE_VERSION = '8.22'
+def JUPITER_VERSION = '5.5.0'
+def MOCKITO_VERSION = '3.0.0'
+
+def eiderGroup = 'io.eider'
+def eiderVersion = '0.1-SNAPSHOT'
+def eiderJavaVersion = JavaVersion.VERSION_11
+
+group = eiderGroup
+version = eiderVersion
 
 allprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
+    apply plugin: 'checkstyle'
 
-    group 'org.substrate'
-    version '1.0-SNAPSHOT'
+    group eiderGroup
+    version eiderVersion
 
     compileJava {
         sourceCompatibility = 11
         targetCompatibility = 11
+        options.compilerArgs << '-XDignore.symbol.file' // Suppress warnings about using Unsafe
+        options.encoding = 'UTF-8'
+        options.deprecation = true
+    }
+
+    compileTestJava {
+        sourceCompatibility = eiderJavaVersion
+        targetCompatibility = eiderJavaVersion
+        options.encoding = 'UTF-8'
+        options.deprecation = true
     }
 
     repositories {
@@ -43,33 +65,69 @@ allprojects {
     }
 
     dependencies {
-        implementation group:'io.aeron', name: 'aeron-all', version: AERON_VERSION
+        implementation group: 'io.aeron', name: 'aeron-all', version: AERON_VERSION
         implementation group: 'org.agrona', name: 'agrona', version: AGRONA_VERSION
         implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: CHECKSTYLE_VERSION
 
-        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
-        testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
-        testImplementation group: 'com.google.truth', name: 'truth', version: '0.39'
-        testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.5'
+        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUPITER_VERSION
+
+        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: JUPITER_VERSION
+        testImplementation group: 'org.mockito', name: 'mockito-core', version: MOCKITO_VERSION
     }
 
     tasks.withType(Checkstyle) {
         checkstyle {
-            configFile = "${rootDir}/config/adaptive_checks.xml" as File
+            configFile = "${rootDir}/config/eider_checks.xml" as File
             configProperties = ["suppressionFile": "${rootDir}/config/suppressions.xml"]
-            toolVersion = '8.22'
+            toolVersion = CHECKSTYLE_VERSION
         }
     }
 
     test {
         useJUnitPlatform()
+        jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+
+        testLogging {
+            showStandardStreams = true
+            exceptionFormat = 'full'
+        }
+    }
+
+    idea {
+        module {
+            downloadJavadoc = true
+            downloadSources = true
+        }
+    }
+
+}
+
+project('eider-core') {
+    apply plugin: 'java-library'
+    apply plugin: 'checkstyle'
+    apply plugin: 'com.github.spotbugs'
+
+    dependencies {
+        compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.12'
+    }
+
+    spotbugs {
+        excludeFilter = file("$rootDir/config/spotbugs_excludes.xml")
+    }
+
+    tasks.withType(com.github.spotbugs.SpotBugsTask) {
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
     }
 }
 
-project('substrate-core') {
-    apply plugin: 'java-library'
-    apply plugin: 'checkstyle'
+wrapper {
+    gradleVersion = '5.5.1'
+    distributionType = 'ALL'
 }
